# predictive-cmi

./: .gitignore  README.md  data.csv  modelo_regresion.pkl  pyproject.toml  server.py
backend/: main.py
backend/models/: predict.py  train.py
frontend/: package.json
frontend/src/actions/: predictionActions.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DashBoard.tsx  FormAddPrediction.tsx  Header.tsx  PredictionCharts.tsx  StadisticsCard.tsx  StatsCard.tsx  data-table.tsx
frontend/src/components/dashboard/: DashBoard.tsx  columns.tsx
frontend/src/components/ui/: table.tsx
frontend/src/service/: PredictionService.ts
frontend/src/types/: predictionData.ts  predictionRequest.ts  result.ts
src/predictive_cmi/: predict.py  train.py
