[tool.poetry]
name = "predictive-cmi"
version = "0.1.0"
description = ""
authors = ["Yoannis Sánchez Soto <yossthedev@gmail.com>"]
readme = "README.md"
packages = [{include = "predictive_cmi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
