[tool.poetry]
name = "predictive-cmi"
version = "0.1.0"
description = ""
authors = ["Yoannis Sánchez Soto <yossthedev@gmail.com>"]
readme = "README.md"
packages = [{include = "predictive_cmi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.2.5"
scikit-learn = "^1.6.1"
joblib = "^1.5.0"
fastapi = "^0.115.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
